--- a/pusher-node/README
+++ b/pusher-node/README
@@ -1,5 +1,9 @@
-in combo with
+in combo with https://launchpad.net/recent-notifications so we can have the last notifications archived in the gnome panel
 
   746  sudo add-apt-repository ppa:jconti/recent-notifications
   747  sudo apt-get update
   748  sudo apt-get install indicator-notifications
+
+
+would be better if
+https://blueprints.launchpad.net/recent-notifications/+spec/blacklist-filter
